kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnet
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magnet
  template:
    metadata:
      labels:
        app: magnet
    spec:
      containers:
        - name: magnet
          image: ypydd88/magnet:latest
          ports:
            - containerPort: 8080
