kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magnet
  namespace: demo
spec:
  selector:
    app: magnet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
